# pokedev

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  run.sh  todo.md  vcpkg.json
include/: application.hpp  event.hpp  file_dialog.hpp  game_loaders.hpp  game_settings.hpp  imgui_utils.hpp  imgui_window.hpp  platform.hpp  pokedev_tool.hpp  porytiles_command_generator.hpp  porytiles_context.hpp  porytiles_gui.hpp  sdl_imgui_integration.hpp  sdl_imgui_wrapper.hpp  serializer.hpp  text_parser.hpp
include/platform/: platform_windows.hpp
include/porytiles/: porytiles_command_generator.hpp
include/shortcuts/: shortcuts.hpp
include/spritesheets/: draw.hpp  palette_png.hpp  spritesheets.hpp
include/tileset/: source_tile.hpp  source_tile_browser.hpp  source_tile_editor.hpp  tileset.hpp  tileset_browser.hpp  tileset_editor.hpp
include/tools/: imgui_demo_tool.hpp  porytiles_tool.hpp  shortcuts_tool.hpp  tileset_tool.hpp
include/trainers/: trainer_data.hpp  trainer_editor.hpp
include/trainers/mons/: mon_data.cpp  mon_data.hpp  mon_editor.cpp
include/types/: mat_vector.hpp
lib/include/cereal/: access.hpp
lib/include/cereal/archives/: json.hpp
lib/include/cereal/details/: helpers.hpp
src/: CMakeLists.txt  application.cpp  application.hpp  event.cpp  file_dialog.cpp  game_data.cpp  game_data.hpp  game_loaders.cpp  game_loaders.hpp  game_settings.cpp  imgui_utils.cpp  imgui_utils.hpp  imgui_window.cpp  main.cpp  platform.cpp  platform.hpp  porytiles_command_generator.cpp  porytiles_gui.cpp  sdl_imgui_integration.cpp  sdl_imgui_wrapper.cpp  serializer.cpp  string_parsing_util.cpp  string_parsing_util.hpp  text_parser.cpp
src/platform/: platform_windows.cpp  platform_windows.hpp
src/porytiles/: porytiles_command_generator.cpp  porytiles_context.hpp  porytiles_gui.cpp  porytiles_gui.hpp
src/shortcuts/: shortcuts.cpp  shortcuts.hpp
src/spritesheets/: draw.cpp  draw.hpp  palette_png.cpp  spritesheets.cpp  spritesheets.hpp
src/tileset/: source_tile.cpp  source_tile_browser.cpp  source_tile_editor.cpp  tileset.cpp  tileset_browser.cpp  tileset_editor.cpp
src/tools/: imgui_demo_tool.cpp  porytiles_tool.cpp  shortcuts_tool.cpp  tileset_editor_tool.cpp  tileset_tool.cpp
src/trainers/: mon_data.cpp  mon_data.hpp  mon_editor.cpp  mon_editor.hpp  trainer_data.hpp  trainer_editor.cpp  trainer_editor.hpp
src/trainers/mons/: mon_data.cpp  mon_data.hpp  mon_editor.cpp  mon_editor.hpp
src/types/: mat_vector.cpp
